--- a/package.php.yml
+++ b/package.php.yml
@@ -1,6 +1,6 @@
 name: preg
-description: Включает поддержку preg_* функций
-version: 1.0.0
+description: Полифилл preg_* функций из php
+version: 1.0
 plugins:
   - Hub
   - Doc
@@ -21,5 +21,6 @@ config:
   ignore:
   - package.hub.yml
   - .git
+  - .phpintel
 
 
